--- a/_posts/2019-07-07-the-us-narrative-today.html
+++ b/_posts/2019-07-07-the-us-narrative-today.html
@@ -2495,107 +2495,107 @@ stories:
   domain: http://www.djournal.com/
   link: https://www.djournal.com/yelich-de-cerveceros-dice-no-a-festival-de-cuadrangulares/image_14571f03-2f5c-5475-bbe5-dc1f8157f029.html
 images:
-- name: oldhouse-granaryfield-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-sunday.jpg
-- name: border-fence-border-fence-on-hill-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-mucha-mult.jpg
-- name: border-fence-border-fence-on-hill-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-yellow-paper.jpg
-- name: power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-cinnamon-rolls.jpg
-- name: blossombar-yellow-paper-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-yellow-paper-file-00-00-50-62.jpg
-- name: mistywoods-babyfoot-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-atari-asteroids.jpg
-- name: fence-mexico-crabapple.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-mexico-crabapple.jpg
-- name: old-granary-field-granaryfield-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-colorful-blocks.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-really-hot.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-really-hot.png
-- name: eduardo-eduardo-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-far-away.jpg
-- name: bordercrossing-border-traffic.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-border-traffic.jpg
-- name: ellis-island-ellis-island-room-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-blue-electricity.jpg
-- name: carry-load-carryload-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-really-hot.jpg
-- name: rain-princess-IMG_6333.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_6333.jpg
-- name: window-window-satan-red.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-satan-red.jpg
-- name: scream-IMG_7936.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_7936.jpg
-- name: flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-crunch-paper.jpg
-- name: art-museum-art-museum-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-really-hot.jpg
-- name: statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-yellow-paper.jpg
-- name: gears-4882162452-fa3126b38d-b-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-light-dali.jpg
-- name: aws-s3-square-97-193-800-500-0-max-0-1--1-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-97-193-800-500-0-max-0-1--1-square.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-free-woman.jpg
-- name: crow_purp_paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_purp_paper.jpg
-- name: castle-wall-DSC-0067-wols.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-wols.JPG
-- name: machine-road-machine-road-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-alien-goggles.jpg
-- name: razorcliff-razorcliff-post-modern.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-post-modern.jpg
-- name: castle-wall-DSC-0067-dark-soul.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-dark-soul.JPG
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-blue-brush.jpg
-- name: razorwire-DSC-0080.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080.jpg
-- name: bordercrossing-bordercrossing-aqua.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-aqua.jpg
-- name: old-school-house-old-schoolhouse-free-woman.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-free-woman.jpg
-- name: hollywood-building-hollywood-building-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-smooth-ride.jpg
-- name: curtain-curtain-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-mucha-mult.jpg
-- name: nyc-flag-nycflag-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-alien-goggles.jpg
-- name: legal-statue-legalstatue-wols.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-wols.jpg
-- name: dragon-desert-desert-dragon-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-creativity.jpg
-- name: server-cloud-server-racks-door-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-kand-two.jpg
-- name: lincoln-memorial-lincolnmemorial-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-purple-storm.jpg
-- name: gears-4882162452-fa3126b38d-b-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-far-away.jpg
-- name: store-on-corner-store-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-plentiful.jpg
-- name: border-crossing-bordercrossing-satan-red.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-satan-red.png
-- name: christianity-christianity-under-construction-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-circuit-4.jpg
-- name: old-door-lock-old-door-lock-2-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-light-dali.jpg
-- name: store-on-corner-store-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-ww2-dresden.jpg
-- name: abe-lincoln-one-plentiful-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-plentiful-file-00-00-00-00.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-monet-one.jpg
-- name: old-cabin-oldcabin-monet-one.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-monet-one.jpg
-- name: mosaic-face-mosaic-face-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-yellow-paper.jpg
-- name: bordercrossing-bordercrossing-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-matrix.jpg
-- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-china-prop.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-china-prop.jpg
-- name: nazi-invasion-DSC_0020.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0020.jpg
+- name: old-door-lock-old-door-lock-2-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-gan-vogh.jpg
+- name: beach-clouds-lifeguard-beachclouds-deep-connections.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/beach-clouds-lifeguard-beachclouds-deep-connections.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-far-away.jpg
+- name: meadowbutterfly-meadow-butterfly-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-sunday.jpg
+- name: subway-subway-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-kand-two.jpg
+- name: old-school-house-old-schoolhouse-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-marcel-duchamp.jpg
+- name: razorwire-DSC-0080-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-space-pizza.jpg
+- name: server-cloud-server-racks-door-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-graham-sutherland.jpg
+- name: school-clouds-church-clouds-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-diego-rivera1.jpg
+- name: rain-princess-IMG_7162.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-IMG_7162.jpg
+- name: stories-35910978054-906047b6cb-z.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-35910978054-906047b6cb-z.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-cinnamon-rolls.jpg
+- name: catacombs-catacombs-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-mucha-mult.jpg
+- name: adam-smith-adam-smith-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-umberto-bocc.jpg
+- name: mosaic-face-mosaic-face-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-creativity.jpg
+- name: store-on-corner-oldcabin-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-dali-three.jpg
+- name: aws-s3-stories-ellis-island-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-ellis-island-nazi-poster.jpg
+- name: christianity-christianity-under-construction-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-kand-two.jpg
+- name: downtown-los-angeles-downtown-la-matrix.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-matrix.JPG
+- name: scream-concert-hall.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-concert-hall.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-crabapple.jpg
+- name: docks-docks-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-far-away.jpg
+- name: downtheline-downtheline-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-plentiful.jpg
+- name: abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-smoking-cigarette-file-00-00-07-91.jpg
+- name: store-on-corner-oldcabin-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-mucha-mult.jpg
+- name: cargo-ship-cargo-ship-on-sea-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit.jpg
+- name: stories-catacombs-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-catacombs-blue-circuit-3.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-sand-paper.jpg
+- name: flower-barbed-wire-flower-barbed-wire-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-neo-instinct.jpg
+- name: store-on-corner-oldcabin-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-neo-instinct.jpg
+- name: yuma-bank-yuma-bak-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-constitution.jpg
+- name: christianity-christianity-under-construction-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-dali-three.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-crafty-painting.jpg
+- name: oldroad-old-road-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-graham-sutherland.jpg
+- name: nazi-invasion-DSC_0015.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0015.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-purp-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-purp-paper.png
+- name: flower-barbed-wire-flower-barbed-wire-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-atari-asteroids.jpg
+- name: mistywoods-babyfoot-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-diego-rivera1.jpg
+- name: nazi-invasion-IMG_6174.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-IMG_6174.jpg
+- name: bordercrossing-bordercrossing-ww2-dresden.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-ww2-dresden.jpg
+- name: docks-docks-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-yellow-paper.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-alien-goggles.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-alien-goggles.png
+- name: amusement-park-amusement-park-2-jap-wav-pr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-jap-wav-pr.jpg
+- name: stories-containership-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-copper-circuit.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-space-pizza.jpg
+- name: status-berlin-status-berlin-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-dark-rain.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-colorful-blocks.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-colorful-blocks.png
+- name: bordercrossing-bordercrossing-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-rainbow-festival.jpg
+- name: old-cabin-oldcabin-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sand-paper.jpg
+- name: aws-s3-smithriver-smithriver-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still-1200.jpg
+- name: old-barn-old-barn-1500-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-graham-sutherland.jpg
 ---
 Zoo Vandals Let Bobcat, Raccoon Briefly Escape, Police Say.&nbsp;High Costs Slow Use Of Body Cameras.&nbsp;Georgia Track And Field Athletes Have Strong Showings At National Summer Events.&nbsp;Man Suffers Significant Injuries In Fall At Quarry.&nbsp;Massive Choir A Place For Estonians To Find Identity, Solace.&nbsp;Accused Burglar Offers Homeowner Meth Hit.&nbsp;Hattiloos Bandele Awarded Grant For Play On Confederate Statue Removals.&nbsp;Movie In The Park Soda Springs On July 15th.&nbsp;
